--- a/src/main/bash/daily/register-daily-checks.conf
+++ b/src/main/bash/daily/register-daily-checks.conf
@@ -1,8 +1,8 @@
 # to be completed
-export PROD_AWS_RDS_USERNAME=""
-export PROD_AWS_RDS_PASSWORD=""
+export PROD_AWS_RDS_USERNAME=''
+export PROD_AWS_RDS_PASSWORD=''
 export PROD_AWS_RDS_HOST=''
 export PROD_AWS_RDS_PORT=
-export PROD_AWS_RDS_SCHEMA=""
+export PROD_AWS_RDS_SCHEMA=''
 
-export PROD_AWS_SQS_URL=""
+export PROD_AWS_SQS_URL=''
